# rust_public_transit_sim

./: .hgignore  Cargo.toml  README.md
src/: config_utils.rs  dynamic_sim.rs  geometry.rs  lib.rs  main.rs  my_dijkstra.rs  passengers.rs  path_network.rs  pt_system.rs  static_sim.rs  test_utils.rs
tests/: simulator_test.rs
tests/envs/pt-differentloads/: config_boarddelays.yaml  config_multiboard.yaml  config_subsample.yaml  network.xml  od_boarddelays.csv  od_multiboard.csv  transitVehicles.xml  transitschedule.xml
tests/envs/pt-multilines/: config.yaml  network.xml  od.csv  transitVehicles.xml  transitschedule.xml
tests/envs/pt-simple/: network.xml  od.csv  transitVehicles.xml  transitschedule.xml
tests/envs/switch-routes/: config_maxtransfers_1.yaml  config_maxtransfers_2.yaml  config_maxtransfers_3.yaml  network.xml  od.csv  transitschedule.xml
tests/envs/walking-transfers/: config.yaml  network.xml  od.csv  transitVehicles.xml  transitschedule.xml
