[package]
name = "rust_public_transit_sim"
version = "0.1.0"
authors = ["andrew"]
edition = "2018"

[dependencies]
rand = "0.8.3"
xml-rs = "0.8"
ndarray = {version = "0.15", features = ["blas", "rayon"]}
blas-src = {version = "0.8", features = ["openblas"]}
openblas-src = {version = "0.10", features = ["cblas", "system"]}
rayon = "1.1"
csv = "1.1"
kdtree = "0.6"
priority-queue = "1.2.0"
itertools = "0.9"
log = "0.4"
env_logger = "0.7"
petgraph = "0.6"
yaml-rust = "0.4"
rand_isaac="0.3"

[dev-dependencies]
tempfile = "3.1.0"
approx = "0.5"
glob = "0.3"